# robot_driver

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
src/: CMakeLists.txt  Patroller.cpp  Template.cpp  Test.h  Test_CliffDetector.cpp  Test_FrontBumperDetector.cpp  Test_MovementDetector.cpp  Test_RotationDetector.cpp  Test_TimeDetector.cpp  Test_VisionDetector.cpp  TurtleBot.cpp
src/Kinect/: Mutex.cpp  Mutex.hpp  MyFreenectDevice.cpp  MyFreenectDevice.hpp  VisionDetector.cpp  VisionDetector.hpp
src/ROSRobot/: AndDetector.hpp  CMakeLists.txt  CliffDetector.cpp  CliffDetector.hpp  Detector.hpp  FrontBumperDetector.cpp  FrontBumperDetector.hpp  MovementDetector.cpp  MovementDetector.hpp  OrDetector.hpp  ROSRobot.hpp  RobotCommander.cpp  RobotCommander.hpp  RobotDriver.cpp  RobotDriver.hpp  RobotOdometry.cpp  RobotOdometry.hpp  RobotSensors.cpp  RobotSensors.hpp  RotationDetector.cpp  RotationDetector.hpp  TimeDetector.cpp  TimeDetector.hpp
